--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 }
 
-group = "nl.skbotnl.boatfix-og" // Declare bundle identifier.
+group = "nl.skbotnl.rewindfix-og" // Declare bundle identifier.
 version = "1.0" // Declare version number.
 
 def apiVersion = "1.18.2" // Declare minecraft server target version.
@@ -53,7 +53,7 @@ dependencies {
     compileOnly 'org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT'
     compileOnly "org.purpurmc.purpur:purpur-api:1.18.2-R0.1-SNAPSHOT" // Declare the Purpur API version to be packaged.
     compileOnly "com.viaversion:viaversion-api:4.4.1"
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0";
+    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0"
 }
 
 shadowJar {
