--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,14 @@
 plugins {
-
-    id "com.github.johnrengelman.shadow" version "7.1.2" // Import Shadow utility to package all libraries into the plugin's .jar file.
-    id "org.jetbrains.kotlin.jvm" version "1.8.20"
-
+    id "com.github.johnrengelman.shadow" version "8.1.1" // Import Shadow utility to package all libraries into the plugin's .jar file.
+    id "org.jetbrains.kotlin.jvm" version "1.9.10"
 }
 
 group = "nl.skbotnl.rewindfix-og" // Declare bundle identifier.
-version = "1.0" // Declare version number.
+version = "1.1" // Declare version number.
 
 def apiVersion = "1.18.2" // Declare minecraft server target version.
-def targetJavaVersion = 17 // Declare java compatibility minimum.
 
 processResources {
-
     def props = [
             version: version,
             apiVersion: apiVersion,
@@ -25,11 +21,9 @@ processResources {
         expand props // Automatically update .jar's internal version numbers.
 
     }
-
 }
 
 repositories {
-
     mavenCentral() // Get built-in Maven Central Repository for managing Maven Repositories in Gradle..
 
     maven { // Import Maven Repository.
@@ -52,28 +46,22 @@ repositories {
 dependencies {
     compileOnly 'org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT'
     compileOnly "org.purpurmc.purpur:purpur-api:1.18.2-R0.1-SNAPSHOT" // Declare the Purpur API version to be packaged.
-    compileOnly "com.viaversion:viaversion-api:4.4.1"
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.7.0"
+    compileOnly "com.viaversion:viaversion-api:4.8.1"
+    compileOnly "com.comphenix.protocol:ProtocolLib:5.1.0"
 }
 
 shadowJar {
-
     minimize()
-
 }
 
 jar.dependsOn shadowJar
 
 tasks.jar.configure {
-
-    classifier = "part"
-
+    archiveClassifier = "part"
 }
 
 tasks.shadowJar.configure {
-
-    classifier = null
-
+    archiveClassifier = null
 }
 
 kotlin {
