--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,4 @@ updates:
       interval: "daily"
     ignore:
       - dependency-name: "org.purpurmc.purpur:purpur-api"
+      - dependency-name: "org.spigotmc:spigot"
